--- a/development.env
+++ b/development.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_URL=http//10.106.1.121:3000
-REACT_APP_CLIENT_ID=1097hy67546hbdy2
-WDS_SOCKET_PORT=3000;
+REACT_APP_HOST="localhost"
 PORT=3001
+REACT_APP_CLIENT_ID=1097hy67546hbdy2
+REACT_APP_WDS_SOCKET_PATH="http://localhost:3000"
