--- a/development.env
+++ b/development.env
@@ -2,3 +2,7 @@ REACT_APP_HOST="localhost"
 PORT=3001
 REACT_APP_CLIENT_ID=1097hy67546hbdy2
 REACT_APP_WDS_SOCKET_PATH="http://localhost:3000"
+REACT_APP_AWS_S3_ACCESS_KEY_ID="AKIA3FYZYXVHLGT7MF5G"
+REACT_APP_AWS_S3_SECRET_ACCESS_KEY="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"
+REACT_APP_AWS_S3_BUCKET_NAME="elasticbeanstalk-us-east-2-768316325198"
+REACT_APP_AWS_S3_REGION="us-east-2"
