--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1135.0",
     "env-cmd": "^10.1.0",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "sass": "^1.49.7",
+    "save": "^2.5.0",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
