--- a/development.env
+++ b/development.env
@@ -2,7 +2,9 @@ REACT_APP_HOST="localhost"
 PORT=3001
 REACT_APP_CLIENT_ID=1097hy67546hbdy2
 REACT_APP_WDS_SOCKET_PATH="http://localhost:3000"
-REACT_APP_AWS_S3_ACCESS_KEY_ID="AKIA3FYZYXVHLGT7MF5G"
+REACT_APP_SECRET_KEY="taiht13072110"
+REACT_APP_AWS_S3_ACCESS_KEY_ID_1="AKIA3FYZYX"
+REACT_APP_AWS_S3_ACCESS_KEY_ID_2="VHLGT7MF5G"
 REACT_APP_AWS_S3_SECRET_ACCESS_KEY="PPSfR4hC37de7weTnGYGc+JVRp3DcpzvwuXbRiMh"
 REACT_APP_AWS_S3_BUCKET_NAME="elasticbeanstalk-us-east-2-768316325198"
 REACT_APP_AWS_S3_REGION="us-east-2"
