--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1135.0",
+    "crypto-browserify": "^3.12.0",
     "env-cmd": "^10.1.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "path": "^0.12.7",
@@ -21,7 +23,12 @@
     "sass": "^1.49.7",
     "save": "^2.5.0",
     "socket.io-client": "^4.4.1",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "env-cmd -f ./development.env react-scripts start",
