--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1135.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "crypto-browserify": "^3.12.0",
     "env-cmd": "^10.1.0",
     "fs": "^0.0.1-security",
