--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-resize-observer": "^1.1.1",
