--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1135.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "crypto-browserify": "^3.12.0",
