--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@giphy/js-fetch-api": "^4.2.0",
     "@giphy/js-types": "^4.2.0",
     "@giphy/react-components": "^5.8.0",
+    "@microsoft/signalr": "^7.0.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
